--- a/install.html
+++ b/install.html
@@ -475,7 +475,7 @@ PORT:36832
 UUID:65d5fad7-af42-4ee9-b5df-a2d0998e8cd7
 V2Ray v2.12.1 is installed.
 </code></pre><p>&#x770B;&#x5230;&#x7C7B;&#x4F3C;&#x4E8E;&#x8FD9;&#x6837;&#x7684;&#x8F93;&#x51FA;&#x7B97;&#x5B89;&#x88C5;&#x6210;&#x529F;&#x4E86;&#xFF0C;&#x4F46;&#x662F;&#x6CE8;&#x610F;&#x56E0;&#x4E3A;&#x811A;&#x672C;&#x6CA1;&#x6709;&#x68C0;&#x6D4B;&#x547D;&#x4EE4;&#x51FA;&#x9519;&#x7684;&#x60C5;&#x51B5;&#xFF0C;&#x6709;&#x65F6;&#x5019;&#x54EA;&#x6015;&#x6CA1;&#x6709;&#x5B89;&#x88C5;&#x6210;&#x529F;&#x6700;&#x540E;&#x4E5F;&#x4F1A;&#x663E;&#x793A; <code>V2Ray v2.X is installed</code>&#xFF0C;&#x56E0;&#x6B64;&#x770B;&#x5230;&#x8FD9;&#x53E5;&#x8BDD;&#x4E0D;&#x4EE3;&#x8868;&#x6210;&#x529F;&#x5B89;&#x88C5;&#x4E86;&#xFF0C;&#x4E3B;&#x8981;&#x8FD8;&#x662F;&#x770B;&#x5B89;&#x88C5;&#x7684;&#x6574;&#x4E2A;&#x8FC7;&#x7A0B;&#x6709;&#x6CA1;&#x6709;&#x9519;&#x8BEF;&#x63D0;&#x793A;&#x3002;&#x4E5F;&#x53EF;&#x4EE5;&#x6267;&#x884C; <code>systemctl status v2ray</code> &#x67E5;&#x770B; V2Ray &#x7684;&#x72B6;&#x6001;&#x5224;&#x65AD;&#x662F;&#x5426;&#x5B89;&#x88C5;&#x6210;&#x529F;&#xFF0C;&#x5F53;&#x6709;&#x7C7B;&#x4F3C;&#x4E0B;&#x9762;&#x7684;&#x4FE1;&#x606F;&#x5C31;&#x4EE3;&#x8868;&#x5B89;&#x88C5;&#x6210;&#x529F;&#x4E86;&#xFF1A;</p>
-<pre><code>$ sudoo  systemctl status v2ray
+<pre><code>$ sudo  systemctl status v2ray
 &#x25CF; v2ray.service - V2Ray Service
    Loaded: loaded (/lib/systemd/system/v2ray.service; enabled)
    Active: inactive (dead)
